--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: rubixvi
-buy_me_a_coffee: rubixstudios
+github: conorluddy
+buy_me_a_coffee: residents
